service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: churn-service
  labels:
    app: churn-app
spec:
  type: ClusterIP
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: churn-app
